<?xml version="1.0"?>
<package format="2">
  <name>robosense_description</name>
  <version>0.1.0</version>
  <description>The robosense_description package</description>

  <maintainer email="daisuke.nishimatsu@tier4.jp">Daisuke Nishimatsu</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
